fix like alignment

--- a/css/main.css
+++ b/css/main.css
@@ -266,5 +266,5 @@ a:hover {
   display: block;
   position: absolute;  
   padding-top: 5px;
-  right: 10%;
+  right: 5%;
 }
